fix: align items end find accommodation header

--- a/src/components/find-student-accomodation/header/find-student-accomodation-header.module.css
+++ b/src/components/find-student-accomodation/header/find-student-accomodation-header.module.css
@@ -1,5 +1,5 @@
 .container {
-  align-items: center;
+  align-items: flex-end;
   border-bottom: 1px solid var(--border-default-grey);
   display: flex;
   gap: 1rem;
